Fixes misaligned quotes in pull quotes component

--- a/scss/_patterns_pull-quotes.scss
+++ b/scss/_patterns_pull-quotes.scss
@@ -4,6 +4,7 @@
   color: $color-mid-dark;
   display: inline-block;
   position: absolute;
+  width: 0.5em;
 }
 
 @mixin vf-pull-quote {
@@ -11,19 +12,59 @@
   margin: $spv-outer--scaleable 0 $spv-outer--scaleable + $sp-unit;
   overflow: visible;
   position: relative;
+
+  &.has-image {
+    margin-top: calc(#{$spv-inner--x-large} + #{$spv-outer--scaleable});
+  }
 }
 
 // Pull quote styling
 @mixin vf-p-pull-quotes {
-  .p-pull-quote {
-    padding: 0 $sph-outer * 2;
+  .p-pull-quote,
+  .p-pull-quote--small,
+  .p-pull-quote--large {
+    @include vf-pull-quote;
+
+    // this needs to be nested to increase the specificity
+    .p-pull-quote__citation {
+      font-style: italic;
+      margin-top: $spv-inner--x-small--scaleable;
+    }
+  }
+
+  .p-pull-quote__image {
+    height: $sp-x-large;
+    position: absolute;
+    top: -$spv-inner--x-large;
+  }
+
+  .p-pull-quote__quote {
     position: relative;
 
-    .p-pull-quote__image {
-      height: $sp-x-large;
-      position: absolute;
-      top: -$spv-inner--x-large;
+    &:first-of-type::before {
+      @include vf-quote-mark;
+
+      content: '\201C'; // Unicode for left double quotation mark +  1/2 em space
+      left: -0.75em;
+      text-align: right;
+      top: 0.5rem;
     }
+
+    &:last-of-type {
+      margin-bottom: 0;
+    }
+
+    &:last-of-type::after {
+      @include vf-quote-mark;
+
+      bottom: 0.55em;
+      content: '\201E';
+      margin-left: 0.25em;
+    }
+  }
+
+  .p-pull-quote {
+    padding: 0 $sph-outer * 2;
 
     .p-pull-quote__quote {
       @extend %vf-heading-4;
@@ -31,14 +72,6 @@
       &::before,
       &::after {
         font-size: 2em;
-      }
-
-      &:last-of-type::after {
-        bottom: 4rem;
-
-        @media (max-width: $breakpoint-heading-threshold) {
-          bottom: 3.5rem;
-        }
       }
     }
 
@@ -56,10 +89,6 @@
       &::before,
       &::after {
         font-size: 1.5em;
-      }
-
-      &:last-of-type::after {
-        bottom: 3rem;
       }
     }
 
@@ -79,14 +108,6 @@
         font-size: 2em;
         max-width: 1em;
       }
-
-      &:last-of-type::after {
-        bottom: 4rem;
-
-        @media (max-width: $breakpoint-heading-threshold) {
-          bottom: 3.5rem;
-        }
-      }
     }
 
     .p-pull-quote__citation {
@@ -94,49 +115,15 @@
     }
   }
 
+  // align the opening quote with the increased top padding of %vf-heading-3 / %vf-heading-4
   .p-pull-quote,
-  .p-pull-quote--small,
   .p-pull-quote--large {
-    @include vf-pull-quote;
-
-    .p-pull-quote__image {
-      height: $sp-x-large;
-      position: absolute;
-      top: -$spv-inner--x-large;
-    }
-
-    .p-pull-quote__citation {
-      font-style: italic;
-      margin-top: $spv-inner--x-small--scaleable;
-    }
-
-    &.has-image {
-      margin-top: calc(#{$spv-inner--x-large} + #{$spv-outer--scaleable});
-    }
-  }
-
-  .p-pull-quote__quote {
-    &:first-of-type::before {
-      @include vf-quote-mark;
-
-      content: '\201C'; // Unicode for left double quotation mark +  1/2 em space
-      left: $spv-inner--x-small;
-      top: 0.5rem;
-
-      @media (max-width: $breakpoint-heading-threshold) {
-        top: 0.75rem;
+    .p-pull-quote__quote {
+      &:first-of-type::before {
+        @media (max-width: $breakpoint-heading-threshold) {
+          top: 0.75rem;
+        }
       }
-    }
-
-    &:last-of-type {
-      margin-bottom: 0;
-    }
-
-    &:last-of-type::after {
-      @include vf-quote-mark;
-
-      content: '\201E';
-      margin-left: $spv-inner--small;
     }
   }
 }
